refactor: misc fixes

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.1",
+    "@mui/x-date-pickers": "^8.10.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "formik": "^2.4.6",
     "lucide-react": "^0.541.0",
